--- a/SyscraftClinicManagement/static/description/index.html
+++ b/SyscraftClinicManagement/static/description/index.html
@@ -62,8 +62,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Contact Us</h1>
-        <p>If you have any questions or need further assistance, please feel free to reach out to us. We are here to help you!</p>
+        <h1>Contact Me</h1>
+        <p>If you have any questions or need further assistance, please feel free to reach out to me. I am here to help you!</p>
         <div class="contact-info">
             <p>Email: <a href="mailto:joembatiadev@gmail.com">joembatiadev@gmail.com</a></p>
                     </div>
